<resources>
    <string name="app_name">Learning Quizoo</string>
    <string name="subjects">Subjects</string>
    <string name="full_name">Full name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="re_type_password">Re type password</string>
    <string name="alreday_have_an_account_login">Alreday have an account? Login</string>
    <string name="sign_Up">Sign up</string>
    <string name="Sign_Up">sign_up1</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">Close</string>
    <string name="app_version_info"></string>
            <string name="app_version">App Version</string>

        <string name="info1">
            In today’s world Smart phones have changed our lives and have become an indispensable part of our lives because of its specialty to simplify our routine,work and thereby saving our time. A Smartphone with an Android OS offers-excellent functionality to the users offering a distinct experience.

            Android is a Linux based operating system and it was bought by Google in 2007.There are tons of application available and one of the prime reason for this vast number is android being an open source. On the other hand, android based device like mobile, tab are very user friendly.

            In this context, Project application is developed based on android platform. The name of application is define as ‘LearningQuizuoo’ or 'LQ'
        </string>
<!--    <string name="info2">-->
<!--        Android is a Linux\' based operating system and it was bought by Google in 2007.There are-->
<!--tons of application available and one of the prime reason for this vast number is-->
<!--android being an open source. On the other hand, android based device like-->
<!--mobile, tab are very user friendly. A survey has done by “Light Castle Partners”-->
<!--research wing which indicates that though other operating system mobile users-->
<!--exist but the majority users are goes with android operating system.In this-->
<!--context, Project application is developed based on android platform. The name-->
<!--of application is define as ‘My Awesome Quiz’-->
<!--                [this is justify]-->

<!--    </string>-->
</resources>